--- a/test/fixtures/data.yml
+++ b/test/fixtures/data.yml
@@ -1,11 +1,34 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+obuchi:
+  survey_id: 1
+  site_name: obuchigawa
+  reseacher_name: sawada
+  date: 2016-10-30 15:32:40
+  weather: hare
+  temperature: 13.6
+  latitude: 40.3
+  longitude: 140.3
+  value1: 2.3
+  value2: 3
+  value3: 2.4
+  value4: 3
+  value5: 2.6  
+  value6: 2.3
+  value7: 3
+  value8: 2.4
+  value9: 3
+  value10: 2.6  
+  value11: 2.3
+  value12: 3
+  value13: 2.4
+  value14: 3
+  value15: 2.6
+  value16: 2.3
+  value17: 3
+  value18: 2.4
+  value19: 3
+  value20: 2.6  
+  value21: 2.3
+  value22: 3
+  value23: 2.4
+  value24: 3
+  value25: 2.6
